--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,14 @@ tokio-stream.features = ["io-util"]
 reqwest.version = "0.12"
 reqwest.features = ["json"]
 
+serde.version = "1.0"
+serde.features = ["derive"]
+
 chrono.version = "0.4"
 chrono.features = ["serde"]
 
 futures = "0.3"
 thiserror = "1.0"
-serde = "1.0"
 serde_json = "1.0"
 itertools = "0.13"
 open = "5.2"
