--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ tokio-stream.version = "0.1"
 tokio-stream.features = ["io-util"]
 
 reqwest.version = "0.12"
-reqwest.features = ["json"]
+reqwest.features = ["blocking", "json", "socks"]
 
 serde.version = "1.0"
 serde.features = ["derive"]
