--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -12,3 +12,4 @@ trash = "fontawesome-trash"
 user = "iconic-user"
 arrow_up = "entypo-up-open"
 arrow_down = "entypo-down-open"
+refresh = "fontawesome-arrows-cw"
