Add copy to clipboard action to code blocks

--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -2,7 +2,7 @@ module = "icon"
 
 [glyphs]
 chat = "entypo-chat"
-clipboard = "entypo-clipboard"
+clipboard = "fontawesome-docs"
 clock = "fontawesome-clock"
 collapse = "fontawesome-collapse-left"
 expand = "fontawesome-expand-right"
@@ -12,4 +12,4 @@ trash = "fontawesome-trash"
 user = "iconic-user"
 arrow_up = "entypo-up-open"
 arrow_down = "entypo-down-open"
-refresh = "fontawesome-arrows-cw"
+refresh = "typicons-arrows-cw"
