--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -13,3 +13,4 @@ user = "iconic-user"
 arrow_up = "entypo-up-open"
 arrow_down = "entypo-down-open"
 refresh = "typicons-arrows-cw"
+globe = "linecons-globe"
