--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -12,5 +12,7 @@ trash = "fontawesome-trash"
 user = "iconic-user"
 arrow_up = "entypo-up-open"
 arrow_down = "entypo-down-open"
+arrow_right = "entypo-right-open"
 refresh = "typicons-arrows-cw"
 globe = "linecons-globe"
+link = "fontawesome-link-ext"
