--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,6 +19,9 @@ serde.features = ["derive"]
 chrono.workspace = true
 chrono.features = ["serde"]
 
+url.workspace = true
+url.features = ["serde"]
+
 uuid.workspace = true
 uuid.features = ["v4", "serde"]
 
@@ -26,7 +29,6 @@ futures.workspace = true
 serde_json.workspace = true
 scraper.workspace = true
 dirs.workspace = true
-url.workspace = true
 thiserror.workspace = true
 log.workspace = true
 sipper.workspace = true
