--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/hecrj/icebreaker"
 [dependencies]
 icebreaker_core.workspace = true
 itertools.workspace = true
+log.workspace = true
 open.workspace = true
 rand.workspace = true
 tokio.workspace = true
@@ -31,6 +32,7 @@ iced.git = "https://github.com/iced-rs/iced.git"
 iced.rev = "cc8b326dfc84aaea3a570c9ad129eb8aaedfcb8c"
 
 chrono = "0.4"
+decoder = "0.0.1"
 dirs = "6.0"
 futures = "0.3"
 itertools = "0.13"
