Update `decoder` dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,9 @@ iced.git = "https://github.com/iced-rs/iced.git"
 iced.rev = "cc8b326dfc84aaea3a570c9ad129eb8aaedfcb8c"
 
 chrono = "0.4"
-decoder = "0.0.1"
+decoder = "0.0.2"
 dirs = "6.0"
+function = "0.2"
 futures = "0.3"
 itertools = "0.13"
 log = "0.4"
