--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,4 +9,4 @@ jobs:
         components: clippy
     - uses: actions/checkout@master
     - name: Check lints
-      run: cargo clippy --workspace --no-deps
+      run: cargo lint
