--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -3,10 +3,8 @@ module = "icon"
 [glyphs]
 clipboard = "fontawesome-docs"
 clock = "fontawesome-clock"
-collapse = "fontawesome-collapse-left"
-expand = "fontawesome-expand-right"
 download = "fontawesome-download"
-heart = "entypo-heart"
+star = "fontawesome-star"
 trash = "fontawesome-trash"
 user = "iconic-user"
 arrow_up = "entypo-up-open"
@@ -15,3 +13,11 @@ arrow_right = "entypo-right-open"
 refresh = "typicons-arrows-cw"
 globe = "linecons-globe"
 link = "fontawesome-link-ext"
+chat = "typicons-chat-alt"
+cubes = "fontawesome-cubes"
+plus = "entypo-plus"
+left = "typicons-left-small"
+server = "fontawesome-server"
+sliders = "fontawesome-sliders"
+search = "entypo-search"
+check = "iconic-ok"
