--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,20 @@ ron.workspace = true
 thiserror.workspace = true
 
 iced.workspace = true
-iced.features = ["tokio", "sipper", "svg", "markdown", "highlighter", "system", "crisp", "debug"]
+iced.features = [
+    "tokio",
+    "sipper",
+    "svg",
+    "markdown",
+    "highlighter",
+    "system",
+    "crisp",
+    "debug",
+]
 
 iced_palace.workspace = true
 iced_palace.features = ["rand"]
+rfd = { workspace = true, features = ["tokio"] }
 
 [build-dependencies]
 iced_fontello = "0.13"
@@ -62,6 +72,7 @@ tracing-subscriber = "0.3"
 url = "2.5"
 uuid = "1.10"
 ron = "0.10.1"
+rfd = "0.15"
 
 [workspace.lints.rust]
 rust_2018_idioms = { level = "deny", priority = -1 }
