Add folder_open icon and update generated code

--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -21,3 +21,4 @@ server = "fontawesome-server"
 sliders = "fontawesome-sliders"
 search = "entypo-search"
 check = "iconic-ok"
+folder_open = "fontawesome-folder-open"
