Add cog icon and update generated code

--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -22,3 +22,4 @@ sliders = "fontawesome-sliders"
 search = "entypo-search"
 check = "iconic-ok"
 folder_open = "fontawesome-folder-open"
+cog = "fontawesome-cog"
