--- a/fonts/icebreaker-icons.toml
+++ b/fonts/icebreaker-icons.toml
@@ -21,3 +21,7 @@ server = "fontawesome-server"
 sliders = "fontawesome-sliders"
 search = "entypo-search"
 check = "iconic-ok"
+cog = "fontawesome-cog"
+palette = "entypo-palette"
+folder = "fontawesome-folder"
+folder_open = "fontawesome-folder-open"
