--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ itertools.workspace = true
 log.workspace = true
 open.workspace = true
 rand.workspace = true
+rfd.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 
@@ -37,7 +38,7 @@ icebreaker_core.path = "./core"
 
 chrono = "0.4"
 decoder = "0.0.3"
-dirs = "6.0"
+directories = "6.0"
 function = "0.2"
 futures = "0.3"
 iced = "0.14.0-dev"
@@ -47,6 +48,7 @@ log = "0.4"
 open = "5.2"
 rand = "0.9"
 reqwest = "0.12"
+rfd = "0.15"
 scraper = "0.22"
 serde = "1.0"
 serde_json = "1.0"
@@ -54,6 +56,7 @@ sipper = "0.1"
 thiserror = "1.0"
 tokio = "1.38"
 tokio-stream = "0.1"
+toml = "0.9"
 tracing-subscriber = "0.3"
 url = "2.5"
 uuid = "1.10"
@@ -68,10 +71,10 @@ large-enum-variant = "allow"
 
 [patch.crates-io]
 iced.git = "https://github.com/iced-rs/iced.git"
-iced.rev = "148fc77b8fbe0c8ad9b85428aa4c3bdac80c4b19"
+iced.rev = "9d56b488cc08b7365fb1839ed47ef92f3ff0fa36"
 
 iced_core.git = "https://github.com/iced-rs/iced.git"
-iced_core.rev = "148fc77b8fbe0c8ad9b85428aa4c3bdac80c4b19"
+iced_core.rev = "9d56b488cc08b7365fb1839ed47ef92f3ff0fa36"
 
 iced_palace.git = "https://github.com/hecrj/iced_palace"
 iced_palace.rev = "cb8f841b638c3886c6582e3d7f2e1de8c67e2e2b"
