Plug my `llama-server` crate to auto-install the executor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ futures = "0.3"
 iced = "0.14.0-dev"
 iced_palace = "0.14.0-dev"
 itertools = "0.13"
+llama-server = "0.1.0-dev"
 log = "0.4"
 open = "5.2"
 rand = "0.9"
@@ -76,5 +77,8 @@ iced.rev = "9d56b488cc08b7365fb1839ed47ef92f3ff0fa36"
 iced_core.git = "https://github.com/iced-rs/iced.git"
 iced_core.rev = "9d56b488cc08b7365fb1839ed47ef92f3ff0fa36"
 
-iced_palace.git = "https://github.com/hecrj/iced_palace"
+iced_palace.git = "https://github.com/hecrj/iced_palace.git"
 iced_palace.rev = "cb8f841b638c3886c6582e3d7f2e1de8c67e2e2b"
+
+llama-server.git = "https://github.com/hecrj/llama-server.git"
+llama-server.rev = "e7e016577ce11ff419628f5eca23732949990894"
