--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "icebreaker_core"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lints]
 workspace = true
@@ -23,7 +23,7 @@ chrono.workspace = true
 chrono.features = ["serde"]
 
 reqwest.workspace = true
-reqwest.features = ["json", "socks", "rustls-tls", "gzip"]
+reqwest.features = ["query", "json", "socks", "rustls", "gzip"]
 
 serde.workspace = true
 serde.features = ["derive"]
