--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "icebreaker_core"
-version = "0.1.0"
-edition = "2024"
+description = "The pure data types of icebreaker"
+version.workspace = true
+authors.workspace = true
+license.workspace = true
+edition.workspace = true
 
 [lints]
 workspace = true
