--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,8 +3,9 @@ name = "icebreaker_core"
 description = "The pure data types of icebreaker"
 version.workspace = true
 authors.workspace = true
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [lints]
 workspace = true
